parsers/python/BSParser.py
# Generated from /Users/life/PycharmProjects/BioScript/grammar/grammar/BSParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

# parser/listener/visitor header section */

class BSParser ( Parser ):

    grammarFileName = "BSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'repeat'", "'while'", 
                     "'function'", "'return'", "'manifest'", "'module'", 
                     "'stationary'", "'functions'", "'instructions'", "'import'", 
                     "'from'", "'detect'", "'mix'", "'split'", "'heat'", 
                     "'drain'", "'dispense'", "'dispose'", "'gradient'", 
                     "'store'", "'range'", "'at'", "'with'", "'for'", "'into'", 
                     "'times'", "'on'", "'of'", "'in'", "'units'", "'use'", 
                     "'finish'", "'after'", "'nat'", "'real'", "'mat'", 
                     "'bool'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", 
                     "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", 
                     "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", 
                     "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'_'", 
                     "'@'", "'ns'", "'us'", "'ms'", "'cs'", "'ds'", "'s'", 
                     "'m'", "'h'", "'d'", "'w'", "'mo'", "'y'", "'nL'", 
                     "'uL'", "'mL'", "'cL'", "'dL'", "'L'", "'daL'", "'c'", 
                     "'f'", "'k'", "<INVALID>", "'1'", "'2'", "'3'", "'4'", 
                     "'5'", "'6'", "'7'", "'8'", "'9'", "'10'", "'11'", 
                     "'12'", "'13'", "'14'", "'15'", "'16'", "'17'", "'18'", 
                     "'19'", "'20'", "'21'", "'22'", "'23'", "'24'", "'25'", 
                     "'26'", "'27'", "'28'", "'29'", "'30'", "'31'", "'32'", 
                     "'33'", "'34'", "'35'", "'37'", "'38'", "'39'", "'40'", 
                     "'42'", "'44'", "'45'", "'46'", "'47'", "'48'", "'49'", 
                     "'50'", "'51'", "'55'", "'58'", "'59'", "'60'", "'61'", 
                     "'62'", "'63'", "'64'", "'65'", "'66'", "'68'", "'69'", 
                     "'70'", "'71'", "'72'", "'73'", "'74'", "'75'", "'76'", 
                     "'98'", "'99'", "'100'", "'134'", "'-1'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "REPEAT", "WHILE", "FUNCTION", 
                      "RETURN", "MANIFEST", "MODULE", "STATIONARY", "FUNCTIONS", 
                      "INSTRUCTIONS", "IMPORT", "FROM", "DETECT", "MIX", 
                      "SPLIT", "HEAT", "DRAIN", "DISPENSE", "DISPOSE", "GRADIENT", 
                      "STORE", "RANGE", "AT", "WITH", "FOR", "INTO", "TIMES", 
                      "ON", "OF", "IN", "UNITS", "USE", "FINISH", "AFTER", 
                      "NAT", "REAL", "MAT", "BOOL", "STRING_LITERAL", "BOOL_LITERAL", 
                      "FLOAT_LITERAL", "INTEGER_LITERAL", "TIME_NUMBER", 
                      "VOLUME_NUMBER", "TEMP_NUMBER", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMICOLON", 
                      "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
                      "QUESTION", "COLON", "EQUALITY", "LTE", "GTE", "NOTEQUAL", 
                      "AND", "OR", "INC", "DEC", "ADDITION", "SUBTRACT", 
                      "MULTIPLY", "DIVIDE", "BITAND", "BITOR", "CARET", 
                      "MOD", "UNDERSCORE", "ATSIGN", "NANOSECOND", "MICROSECOND", 
                      "MILLISECOND", "CENTISECOND", "DECISECOND", "SECOND", 
                      "MINUTE", "HOUR", "DAY", "WEEK", "MONTH", "YEAR", 
                      "NANOLITRE", "MICROLITRE", "MILLILITRE", "CENTILITRE", 
                      "DECILITRE", "LITRE", "DECALITRE", "CELSIUS", "FAHRENHEIT", 
                      "KELVIN", "IDENTIFIER", "ACIDS_STRONG_NON_OXIDIZING", 
                      "ACIDS_STRONG_OXIDIZING", "ACIDS_CARBOXYLIC", "ALCOHOLS_AND_POLYOLS", 
                      "ALDEHYDES", "AMIDES_AND_IMIDES", "AMINES_PHOSPHINES_AND_PYRIDINES", 
                      "AZO_DIAZO_AZIDO_HYDRAZINE_AND_AZIDE_COMPOUNDS", "CARBAMATES", 
                      "BASES_STRONG", "CYANIDES_INORGANIC", "THIOCARBAMATE_ESTERS_AND_SALTS_DITHIOCARBAMATE_ESTERS_AND_SALTS", 
                      "ESTERS_SULFATE_ESTERS_PHOSPHATE_ESTERS_THIOPHOSPHATE_ESTERS_AND_BORATE_ESTERS", 
                      "ETHERS", "FLUORIDES_INORGANIC", "HYDROCARBONS_AROMATIC", 
                      "HALOGENATED_ORGANIC_COMPOUNDS", "ISOCYANATES_AND_ISOTHIOCYANATES", 
                      "KETONES", "SULFIDES_ORGANIC", "METALS_ALKALI_VERY_ACTIVE", 
                      "METALS_ELEMENTAL_AND_POWDER_ACTIVE", "METALS_LESS_REACTIVE", 
                      "METALS_AND_METAL_COMPOUNDS_TOXIC", "DIAZONIUM_SALTS", 
                      "NITRILES", "NITRO_NITROSO_NITRATE_AND_NITRITE_COMPOUNDS_ORGANIC", 
                      "HYDROCARBONS_ALIPHATIC_UNSATURATED", "HYDROCARBONS_ALIPHATIC_SATURATED", 
                      "PEROXIDES_ORGANIC", "PHENOLS_AND_CRESOLS", "SULFONATES_PHOSPHONATES_AND_THIOPHOSPHONATES_ORGANIC", 
                      "SULFIDES_INORGANIC", "EPOXIDES", "METAL_HYDRIDES_METAL_ALKYLS_METAL_ARYLS_AND_SILANES", 
                      "ANHYDRIDES", "SALTS_ACIDIC", "SALTS_BASIC", "ACYL_HALIDES_SULFONYL_HALIDES_AND_CHLOROFORMATES", 
                      "ORGANOMETALLICS", "OXIDIZING_AGENTS_STRONG", "REDUCING_AGENTS_STRONG", 
                      "NON_REDOX_ACTIVE_INORGANIC_COMPOUNDS", "FLUORINATED_ORGANIC_COMPOUNDS", 
                      "FLUORIDE_SALTS_SOLUBLE", "OXIDIZING_AGENTS_WEAK", 
                      "REDUCING_AGENTS_WEAK", "NITRIDES_PHOSPHIDES_CARBIDES_AND_SILICIDES", 
                      "CHLOROSILANES", "SILOXANES", "HALOGENATING_AGENTS", 
                      "ACIDS_WEAK", "BASES_WEAK", "CARBONATE_SALTS", "ALKYNES_WITH_ACETYLENIC_HYDROGEN", 
                      "ALKYNES_WITH_NO_ACETYLENIC_HYDROGEN", "CONJUGATED_DIENES", 
                      "ARYL_HALIDES", "AMINES_AROMATIC", "NITRATE_AND_NITRITE_COMPOUNDS_INORGANIC", 
                      "ACETALS_KETALS_HEMIACETALS_AND_HEMIKETALS", "ACRYLATES_AND_ACRYLIC_ACIDS", 
                      "PHENOLIC_SALTS", "QUATERNARY_AMMONIUM_AND_PHOSPHONIUM_SALTS", 
                      "SULFITE_AND_THIOSULFATE_SALTS", "OXIMES", "POLYMERIZABLE_COMPOUNDS", 
                      "NOT_CHEMICALLY_REACTIVE", "INSUFFICIENT_INFORMATION_FOR_CLASSIFICATION", 
                      "WATER_AND_AQUEOUS_SOLUTIONS", "NULL", "UNKNOWN", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_globalDeclarations = 1
    RULE_moduleDeclaration = 2
    RULE_manifestDeclaration = 3
    RULE_stationaryDeclaration = 4
    RULE_importStatement = 5
    RULE_importLibrary = 6
    RULE_importFuncFromLibrary = 7
    RULE_fromLibrary = 8
    RULE_functions = 9
    RULE_functionDeclaration = 10
    RULE_formalParameters = 11
    RULE_formalParameterList = 12
    RULE_formalParameter = 13
    RULE_functionTyping = 14
    RULE_returnStatement = 15
    RULE_blockStatement = 16
    RULE_statements = 17
    RULE_ifStatement = 18
    RULE_whileStatement = 19
    RULE_repeat = 20
    RULE_heat = 21
    RULE_forInStatement = 22
    RULE_dispose = 23
    RULE_mix = 24
    RULE_usein = 25
    RULE_useinType = 26
    RULE_sle = 27
    RULE_seq = 28
    RULE_sge = 29
    RULE_fle = 30
    RULE_feq = 31
    RULE_fge = 32
    RULE_detect = 33
    RULE_split = 34
    RULE_dispense = 35
    RULE_gradient = 36
    RULE_store = 37
    RULE_numberAssignment = 38
    RULE_math = 39
    RULE_binops = 40
    RULE_parExpression = 41
    RULE_methodInvocation = 42
    RULE_methodCall = 43
    RULE_expressionList = 44
    RULE_typeType = 45
    RULE_unionType = 46
    RULE_typesList = 47
    RULE_variableDefinition = 48
    RULE_listDefinition = 49
    RULE_variable = 50
    RULE_numericAlias = 51
    RULE_list = 52
    RULE_primary = 53
    RULE_literal = 54
    RULE_primitiveType = 55
    RULE_chemicalType = 56
    RULE_timeIdentifier = 57
    RULE_temperatureIdentifier = 58
    RULE_unitTracker = 59

    ruleNames =  [ "program", "globalDeclarations", "moduleDeclaration", 
                   "manifestDeclaration", "stationaryDeclaration", "importStatement", 
                   "importLibrary", "importFuncFromLibrary", "fromLibrary", 
                   "functions", "functionDeclaration", "formalParameters", 
                   "formalParameterList", "formalParameter", "functionTyping", 
                   "returnStatement", "blockStatement", "statements", "ifStatement", 
                   "whileStatement", "repeat", "heat", "forInStatement", 
                   "dispose", "mix", "usein", "useinType", "sle", "seq", 
                   "sge", "fle", "feq", "fge", "detect", "split", "dispense", 
                   "gradient", "store", "numberAssignment", "math", "binops", 
                   "parExpression", "methodInvocation", "methodCall", "expressionList", 
                   "typeType", "unionType", "typesList", "variableDefinition", 
                   "listDefinition", "variable", "numericAlias", "list", 
                   "primary", "literal", "primitiveType", "chemicalType", 
                   "timeIdentifier", "temperatureIdentifier", "unitTracker" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    REPEAT=3
    WHILE=4
    FUNCTION=5
    RETURN=6
    MANIFEST=7
    MODULE=8
    STATIONARY=9
    FUNCTIONS=10
    INSTRUCTIONS=11
    IMPORT=12
    FROM=13
    DETECT=14
    MIX=15
    SPLIT=16
    HEAT=17
    DRAIN=18
    DISPENSE=19
    DISPOSE=20
    GRADIENT=21
    STORE=22
    RANGE=23
    AT=24
    WITH=25
    FOR=26
    INTO=27
    TIMES=28
    ON=29
    OF=30
    IN=31
    UNITS=32
    USE=33
    FINISH=34
    AFTER=35
    NAT=36
    REAL=37
    MAT=38
    BOOL=39
    STRING_LITERAL=40
    BOOL_LITERAL=41
    FLOAT_LITERAL=42
    INTEGER_LITERAL=43
    TIME_NUMBER=44
    VOLUME_NUMBER=45
    TEMP_NUMBER=46
    LPAREN=47
    RPAREN=48
    LBRACE=49
    RBRACE=50
    LBRACKET=51
    RBRACKET=52
    SEMICOLON=53
    COMMA=54
    DOT=55
    ASSIGN=56
    GT=57
    LT=58
    BANG=59
    TILDE=60
    QUESTION=61
    COLON=62
    EQUALITY=63
    LTE=64
    GTE=65
    NOTEQUAL=66
    AND=67
    OR=68
    INC=69
    DEC=70
    ADDITION=71
    SUBTRACT=72
    MULTIPLY=73
    DIVIDE=74
    BITAND=75
    BITOR=76
    CARET=77
    MOD=78
    UNDERSCORE=79
    ATSIGN=80
    NANOSECOND=81
    MICROSECOND=82
    MILLISECOND=83
    CENTISECOND=84
    DECISECOND=85
    SECOND=86
    MINUTE=87
    HOUR=88
    DAY=89
    WEEK=90
    MONTH=91
    YEAR=92
    NANOLITRE=93
    MICROLITRE=94
    MILLILITRE=95
    CENTILITRE=96
    DECILITRE=97
    LITRE=98
    DECALITRE=99
    CELSIUS=100
    FAHRENHEIT=101
    KELVIN=102
    IDENTIFIER=103
    ACIDS_STRONG_NON_OXIDIZING=104
    ACIDS_STRONG_OXIDIZING=105
    ACIDS_CARBOXYLIC=106
    ALCOHOLS_AND_POLYOLS=107
    ALDEHYDES=108
    AMIDES_AND_IMIDES=109
    AMINES_PHOSPHINES_AND_PYRIDINES=110
    AZO_DIAZO_AZIDO_HYDRAZINE_AND_AZIDE_COMPOUNDS=111
    CARBAMATES=112
    BASES_STRONG=113
    CYANIDES_INORGANIC=114
    THIOCARBAMATE_ESTERS_AND_SALTS_DITHIOCARBAMATE_ESTERS_AND_SALTS=115
    ESTERS_SULFATE_ESTERS_PHOSPHATE_ESTERS_THIOPHOSPHATE_ESTERS_AND_BORATE_ESTERS=116
    ETHERS=117
    FLUORIDES_INORGANIC=118
    HYDROCARBONS_AROMATIC=119
    HALOGENATED_ORGANIC_COMPOUNDS=120
    ISOCYANATES_AND_ISOTHIOCYANATES=121
    KETONES=122
    SULFIDES_ORGANIC=123
    METALS_ALKALI_VERY_ACTIVE=124
    METALS_ELEMENTAL_AND_POWDER_ACTIVE=125
    METALS_LESS_REACTIVE=126
    METALS_AND_METAL_COMPOUNDS_TOXIC=127
    DIAZONIUM_SALTS=128
    NITRILES=129
    NITRO_NITROSO_NITRATE_AND_NITRITE_COMPOUNDS_ORGANIC=130
    HYDROCARBONS_ALIPHATIC_UNSATURATED=131
    HYDROCARBONS_ALIPHATIC_SATURATED=132
    PEROXIDES_ORGANIC=133
    PHENOLS_AND_CRESOLS=134
    SULFONATES_PHOSPHONATES_AND_THIOPHOSPHONATES_ORGANIC=135
    SULFIDES_INORGANIC=136
    EPOXIDES=137
    METAL_HYDRIDES_METAL_ALKYLS_METAL_ARYLS_AND_SILANES=138
    ANHYDRIDES=139
    SALTS_ACIDIC=140
    SALTS_BASIC=141
    ACYL_HALIDES_SULFONYL_HALIDES_AND_CHLOROFORMATES=142
    ORGANOMETALLICS=143
    OXIDIZING_AGENTS_STRONG=144
    REDUCING_AGENTS_STRONG=145
    NON_REDOX_ACTIVE_INORGANIC_COMPOUNDS=146
    FLUORINATED_ORGANIC_COMPOUNDS=147
    FLUORIDE_SALTS_SOLUBLE=148
    OXIDIZING_AGENTS_WEAK=149
    REDUCING_AGENTS_WEAK=150
    NITRIDES_PHOSPHIDES_CARBIDES_AND_SILICIDES=151
    CHLOROSILANES=152
    SILOXANES=153
    HALOGENATING_AGENTS=154
    ACIDS_WEAK=155
    BASES_WEAK=156
    CARBONATE_SALTS=157
    ALKYNES_WITH_ACETYLENIC_HYDROGEN=158
    ALKYNES_WITH_NO_ACETYLENIC_HYDROGEN=159
    CONJUGATED_DIENES=160
    ARYL_HALIDES=161
    AMINES_AROMATIC=162
    NITRATE_AND_NITRITE_COMPOUNDS_INORGANIC=163
    ACETALS_KETALS_HEMIACETALS_AND_HEMIKETALS=164
    ACRYLATES_AND_ACRYLIC_ACIDS=165
    PHENOLIC_SALTS=166
    QUATERNARY_AMMONIUM_AND_PHOSPHONIUM_SALTS=167
    SULFITE_AND_THIOSULFATE_SALTS=168
    OXIMES=169
    POLYMERIZABLE_COMPOUNDS=170
    NOT_CHEMICALLY_REACTIVE=171
    INSUFFICIENT_INFORMATION_FOR_CLASSIFICATION=172
    WATER_AND_AQUEOUS_SOLUTIONS=173
    NULL=174
    UNKNOWN=175
    WS=176
    COMMENT=177
    LINE_COMMENT=178

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTRUCTIONS(self):
            return self.getToken(BSParser.INSTRUCTIONS, 0)

        def COLON(self):
            return self.getToken(BSParser.COLON, 0)

        def EOF(self):
            return self.getToken(BSParser.EOF, 0)

        def globalDeclarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSParser.GlobalDeclarationsContext)
            else:
                return self.getTypedRuleContext(BSParser.GlobalDeclarationsContext,i)


        def functions(self):
            return self.getTypedRuleContext(BSParser.FunctionsContext,0)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSParser.StatementsContext)
            else:
                return self.getTypedRuleContext(BSParser.StatementsContext,i)


        def getRuleIndex(self):
            return BSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.globalDeclarations()
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BSParser.MANIFEST) | (1 << BSParser.MODULE) | (1 << BSParser.STATIONARY) | (1 << BSParser.IMPORT) | (1 << BSParser.LBRACKET))) != 0)):
                    break

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BSParser.FUNCTIONS:
                self.state = 125
                self.functions()


            self.state = 128
            self.match(BSParser.INSTRUCTIONS)
            self.state = 129
            self.match(BSParser.COLON)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BSParser.IF) | (1 << BSParser.REPEAT) | (1 << BSParser.WHILE) | (1 << BSParser.HEAT) | (1 << BSParser.DRAIN) | (1 << BSParser.DISPOSE) | (1 << BSParser.STORE) | (1 << BSParser.FOR) | (1 << BSParser.LBRACKET))) != 0) or _la==BSParser.ATSIGN or _la==BSParser.IDENTIFIER:
                self.state = 130
                self.statements()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(BSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduleDeclaration(self):
            return self.getTypedRuleContext(BSParser.ModuleDeclarationContext,0)


        def manifestDeclaration(self):
            return self.getTypedRuleContext(BSParser.ManifestDeclarationContext,0)


        def stationaryDeclaration(self):
            return self.getTypedRuleContext(BSParser.StationaryDeclarationContext,0)


        def importStatement(self):
            return self.getTypedRuleContext(BSParser.ImportStatementContext,0)


        def getRuleIndex(self):
            return BSParser.RULE_globalDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDeclarations" ):
                listener.enterGlobalDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDeclarations" ):
                listener.exitGlobalDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDeclarations" ):
                return visitor.visitGlobalDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def globalDeclarations(self):

        localctx = BSParser.GlobalDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalDeclarations)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.moduleDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.manifestDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.stationaryDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.importStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'
